# syma-py

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: lib.rs
syma_py/: __init__.py  _native.pyi
tests/: test_syma.py
